<resources>
    <string name="app_name">Srikaya</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="required_price">$%d</string>
    <string name="minus_symbol">—</string>
    <string name="plus_symbol">＋</string>
    <string name="add_to_cart">Add to Cart : $%d </string>
    <string name="total_order">Total: $%d</string>
    <string name="back">Back</string>ca
    <string name="srikaya_product">Srikaya Product</string>
    <string name="share_message">Hey, check out my cart with total $%2$d. Found it on Srikaya! </string>
    <string name="collapsed">Thank You.</string>
    <string name="no_items_in_cart">No Items In Cart\n</string>
    <string name="placeholder_search">Find the jewels…</string>
    <string name="no_items_avalable">No Items Available</string>
    <string name="avatar">Avatar</string>
    <string name="heavenvalentine49_gmail_com">heavenvalentine49@gmail.com</string>
    <string name="linkedin_link">https://id.linkedin.com/in/heaven-valentine-225ab0247</string>
    <string name="githubLink">https://github.com/heavenvalentine2</string>
    <string name="whatsappLink">https://wa.me/qr/FEJLBA7YFHYHK1</string>
    <string name="error_message">Oops! Something were wrong.</string>
    <string name="myName">Heaven Valentine</string>
    <string name="linkedin">LinkedIn</string>
    <string name="github">GitHub</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="order">Order</string>
    <string name="example_title">Cincin Srikaya</string>
    <string name="example_desc">Ini cincin bagus banget, beum lagi harganya sangat terjangkau. Ayo, check out sekarang.</string>
</resources>