...
    } else {
        LazyVerticalGrid(
            columns = GridCells.Adaptive(160.dp),
            contentPadding = PaddingValues(16.dp),
            horizontalArrangement = Arrangement.spacedBy(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = modifier.testTag("ProductList")
        ) {
            items(orderProduct, key = {it.product.id}) { data ->
                ProductItem(
                    image = data.product.image,
                    title = data.product.title,
                    requiredPrice = data.product.requiredPrice,
...
